<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AbitPro</string>
    <string name="hello_text">Приложение готово к работе.\nОстался финальный этап - настройка\nфильтров для выдачи подходящих\nВам вузов. Рекомендуем указывать\nдостоверную информацию, чтобы\nполучить предложения, которые\nподходят Вам лучше всего.\n\nВсе указанные вами данные\nхранятся на вашем устройстве\nлокально и никуда не передаются.</string>
    <string name="lets_start">Начало работы</string>
    <string name="intro_text">@string/hello_text</string>
    <string name="start_search">Начать поиск</string>

    <string name="default1">num</string>
    <string name="default2">Default text</string>
    <string name="default3">DEFAULT _____ TEXT _____ 3</string>

    <string name="first_fragment_label">Первый фрагмент</string>
    <string name="second_fragment_label">Второй фрагмент</string>

    <string name="search_entry_text">Параметры поиска вуза</string>
    <string name="search_result">Результаты поиска:</string>
    <string name="change_settings">Параметры сортировки:</string>
    <string name="search">поиск</string>
    <string name="value">балл:</string>
    <string name="places">мест:</string>
    <string name="way">Направления:</string>
    <string name="typing_way">Введите направление</string>

    <string name="value_free">Проходной балл на бюджет</string>
    <string name="value_paid">Проходной балл на платное</string>

    <string name="places_free">Количество бюджетных мест</string>
    <string name="places_paid">Количество платных мест</string>

    <string name="cost_paid">Стоимость обучения, руб/мес</string>

    <string name="intro_courses">Подготовительные курсы</string>
    <string name="city">Город</string>
    <string name="war_dep">Военная кафедра</string>

    <string name="price_month">р/мес</string>
    <string name="price_year">р/год</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>