<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DBackground1"
    tools:context=".vus_result_activity">

    <include
        android:id="@+id/searchEntry"
        layout="@layout/prefab_search_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/searchEntry"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/param_background"
                android:padding="11dp"
                android:layout_marginTop="5dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/param_background2"
                    android:padding="11dp">
                    <TextView
                        android:layout_marginTop="60dp"
                        android:id="@+id/vuz_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Санкт-Петербургский государственный экономический университет"
                        android:textColor="@color/DWhite1"
                        android:textSize="20sp"/>
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="horizontal"
                android:padding="11dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/way"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />

                <TableLayout
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shrinkColumns="*"
                    android:stretchColumns="*"
                    android:padding="4dp">
                    <TableRow
                        android:layout_marginBottom="4dp">
                        <include
                            layout="@layout/value_text"
                            android:layout_marginEnd="4dp"
                            android:layout_width="0dp"
                            android:layout_weight="1" />
                        <include
                            layout="@layout/value_text"
                            android:layout_width="0dp"
                            android:layout_weight="1" />
                    </TableRow>
                    <TableRow
                        android:layout_marginBottom="4dp">
                        <include
                            layout="@layout/value_text"
                            android:layout_span="2"
                            android:layout_width="match_parent" />
                    </TableRow>
                    <TableRow>
                        <include
                            layout="@layout/value_text"
                            android:layout_span="2"
                            android:layout_width="match_parent" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="vertical"
                android:padding="11dp">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/value_free"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include
                        layout="@layout/value_num"
                        />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/places_free"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include layout="@layout/value_num"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="vertical"
                android:padding="11dp">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/value_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include layout="@layout/value_num"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/places_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include layout="@layout/value_num"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cost_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include layout="@layout/value_num"/>
                </LinearLayout>



            </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/param_background"
                    android:padding="11dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/intro_courses"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include layout="@layout/value_price"/>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/param_background"
                android:padding="11dp"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/city"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />
                <include layout="@layout/value_text"/>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/param_background"
                android:padding="11dp"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/war_dep"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />
                <include layout="@layout/value_text"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottomBar"
        layout="@layout/prefab_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>