<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DBackground1"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ResultActivity">

    <include
        android:layout_margin="11dp"
        android:id="@+id/searchEntry"
        layout="@layout/prefab_search_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/change_settings"
        android:textColor="@color/DWhite1"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/searchEntry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingHorizontal="11dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="horizontal"
                android:padding="11dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/way"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:padding="4dp">

                    <include
                        android:id="@+id/table1_1"
                        layout="@layout/value_text_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/table1_2"
                        layout="@layout/value_text_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/table1_3"
                        layout="@layout/value_text_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1" />
                    <include
                        android:id="@+id/table1_4"
                        layout="@layout/value_text_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="vertical"
                android:padding="11dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/value_free"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include
                        android:id="@+id/budg_ball_value_entry"
                        layout="@layout/value_num_param"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/places_free"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include
                        android:id="@+id/budg_place_value_entry"
                        layout="@layout/value_num_param"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:orientation="vertical"
                android:padding="11dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/value_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />

                    <include
                        android:id="@+id/paid_ball_value_entry"
                        layout="@layout/value_num_param"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/places_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include
                        android:id="@+id/paid_places_value_entry"
                        layout="@layout/value_num_param"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cost_paid"
                        android:textColor="@color/DWhite1"
                        android:textSize="16sp" />
                    <include
                        android:id="@+id/paid_cost_value_entry"
                        layout="@layout/value_price_param"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:gravity="center_vertical"
                android:padding="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/intro_courses"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />

                <include
                    android:id="@+id/courses_value_param"
                    layout="@layout/value_price_param"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="11dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/city"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />
                <include
                    android:id="@+id/city_value_param"
                    layout="@layout/value_text_param"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/param_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="11dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/war_dep"
                    android:textColor="@color/DWhite1"
                    android:textSize="16sp" />

                <CheckBox
                    android:layout_marginEnd="2dp"
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/DWhite1" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottomBar"
        layout="@layout/prefab_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>